Fiks overflow bug

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@
 
 main {
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .nav-topp {
